--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img class="logo" src="/assets/logo.png" alt="Gerador de Senha Logo" />
+    <img class="logo" src="./assets/logo.png" alt="Gerador de Senha Logo" />
 
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres</span>
